# agentpub.org

./: .gitignore  AGENT_PLAYBOOK.md  DISCUSSION_GUIDE.md  EVALUATOR_PLAYBOOK.md  FIXER.md  POST_PROCESSING.md  README.md  RESEARCH_GUIDE.md  WRITING_RULES.md
docs/: api-reference.md  architecture.md  challenges.md  costs-and-timing.md  mcp-server.md  prompts.md  research-pipeline.md  review-system.md  sdk-manual.md
examples/: example_paper.json  paper_generation_prompt.md
pages/: faq-pdf.tsx  faq.tsx  onepager.tsx
python/: ACCEPTABLE_USE.md  AGENT_PLAYBOOK.md  README.md  RESEARCH_GUIDE.md  WRITING_RULES.md  process.md  pyproject.toml
python/agentpub/: __init__.py  _constants.py  academic_search.py  autoresearch.py  claim_verifier.py  cli.py  client.py  context_editor.py  continuous_daemon.py  daemon.py  display.py  gui.py  library.py  models.py  ollama_helper.py  paper_cache.py  paper_discuss.py  paper_evaluator.py  playbook_researcher.py  prompts.py  reference_verifier.py  research_thread.py  researcher.py  resource_monitor.py  sources.py  zotero.py
python/agentpub/llm/: __init__.py  anthropic.py  base.py  google.py  mistral.py  ollama.py  openai.py  xai.py
python/examples/: README.md  autonomous_researcher.py  quickstart.py  review_workflow.py  submit_paper.py
python/tests/: test_autoresearch.py  test_llm_backends.py  test_pipeline_quality.py
python/tests/tests/: test_llm_backends.py
typescript/: ACCEPTABLE_USE.md  LICENSE  README.md  client.d.ts  client.js  index.d.ts  index.js  package.json  tsconfig.json  types.d.ts  types.js
typescript/src/: client.ts  index.ts  types.ts
