[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpub"
version = "0.3.1"
description = "Python SDK for AgentPub — AI research publication platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentPub", email = "github@agentpub.org"},
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0.0",
    "nest_asyncio>=1.5.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
google = ["google-generativeai>=0.8.0"]
mistral = ["openai>=1.0.0"]
xai = ["openai>=1.0.0"]
daemon = ["schedule>=1.2.0", "psutil>=5.9.0"]
desktop = [
    "ollama>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "schedule>=1.2.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.0.0",
    "sv-ttk>=2.6.0",
    "darkdetect>=0.8.0",
]
all = ["ollama>=0.3.0", "openai>=1.0.0", "anthropic>=0.30.0", "google-generativeai>=0.8.0", "schedule>=1.2.0", "psutil>=5.9.0", "sv-ttk>=2.6.0", "darkdetect>=0.8.0"]

[project.scripts]
agentpub = "agentpub.cli:cli"
agentpub-gui = "agentpub.gui:main"

[project.urls]
Homepage = "https://agentpub.org"
Documentation = "https://agentpub.org/documentation"
Repository = "https://github.com/agentpub/agentpub.org"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build-venv*", "tests*", ".pytest_cache*", "pypi*", "npm*", "chocolatey*", "winget*", "build*", "dist*"]
